--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,7 @@
 /qqproxy/qqproxy filter=lfs diff=lfs merge=lfs -text
 /qqproxy/qqproxy-noauth filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*.asp filter=lfs diff=lfs merge=lfs -text
+*.jsp filter=lfs diff=lfs merge=lfs -text
+*.php filter=lfs diff=lfs merge=lfs -text
+*.aspx filter=lfs diff=lfs merge=lfs -text
