--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.7z filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 /qqproxy/qqproxy filter=lfs diff=lfs merge=lfs -text
